# open-csip-aus-listing-api

./: .env.example  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml  generate_hash.py
open_cec_api/: __main__.py  settings.py
open_cec_api/api/: admin_router.py  auth.py  crud.py  public_router.py  router.py  start.py
open_cec_api/api/crud/: __init__.py  base.py  certificate.py  crud.py  device_class.py  device_class_attribute.py  entity.py  extended.py  filters.py  key.py  listing.py  listing_device_class.py  listing_device_class_attribute.py
open_cec_api/api/schema/: create.py  enums.py  extended.py  read.py  update.py
open_cec_api/api/v1/: models.py  router.py  schema.py
open_cec_api/api/v2/: models.py  router.py
open_cec_api/services/database/: db.py  initialisation.py  models.py  setup.py
tests/: conftest.py
tests/api/: test_crud.py
tests/services/database/: test_models.py
