[project]
name = "open-csip-aus-listing-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.7",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "testcontainers>=4.14.1",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
# If you only ship packages (directories with __init__.py)
packages = ["open_cec_api"]
